# dnnmcshap

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
examples/: full_pipeline.py  quickstart.R  quickstart.py
rdnnmcshap/: DESCRIPTION  LICENSE  NAMESPACE
rdnnmcshap/R/: conditional.R  encoding.R  model.R  montecarlo.R  pipeline.R  plotting.R  shapley.R  training.R  zzz.R
rdnnmcshap/inst/python/: requirements.txt
rdnnmcshap/vignettes/: introduction.Rmd
src/dnnmcshap/: __init__.py  _constants.py  _typing.py  conditional.py  encoding.py  io.py  metrics.py  model.py  montecarlo.py  pipeline.py  plotting.py  sensitivity.py  shapley.py  standardisation.py  training.py
tests/: conftest.py  test_conditional.py  test_encoding.py  test_integration.py  test_io.py  test_metrics.py  test_model.py  test_montecarlo.py  test_pipeline.py  test_plotting.py  test_sensitivity.py  test_shapley.py  test_standardisation.py  test_training.py
